footer: small size fixes

--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <section id="contacts-container"
-         class="relative mt-3 xl:mt-4 2xl:mt-8 mb-0 xl:mb-5 2xl:mb-12 font-sans rounded-4xl overflow-hidden max-md:mx-5 md:mx-auto w-auto md:w-[720px] lg:w-[1000px] lg:h-[676px] xl:w-[1164px] xl:h-[680px] 2xl:w-[1376px] 2xl:h-[780px] 3xl:w-[1540px] 3xl:h-[874px]">
+         class="relative mt-3 xl:mt-4 2xl:mt-8 mb-0 xl:mb-5 2xl:mb-12 font-sans rounded-4xl overflow-hidden max-md:mx-5 md:mx-auto min-w-[340px] w-auto md:w-[720px] lg:w-[1000px] lg:h-[676px] xl:w-[1164px] xl:h-[680px] 2xl:w-[1376px] 2xl:h-[780px] 3xl:w-[1540px] 3xl:h-[874px]">
     <!-- Contact switcher (абсолютное позиционирование) -->
     <div class="absolute left-4 top-36 md:top-[204px] md:left-8 lg:left-auto lg:top-3 lg:right-3 z-10 mb-2 md:mb-4 lg:mb-0">
         <div class="flex items-start justify-between max-xl:gap-3 max-md:gap-2 p-0 xl:p-3 2xl:p-4 2xl:pb-7 xl:bg-white rounded-28 h-[80px] md:h-[88px] xl:h-[98px] 2xl:h-[140px] w-auto md:w-[440px] lg:w-[488px] xl:w-[493px] 2xl:w-[578px]">
@@ -182,7 +182,7 @@
                     </div>
 
                     <div class="form-row">
-                        <textarea name="description" class="form-field resize-y min-h-8 md:max-h-20 lg:max-h-8 2xl:max-h-27" rows="1" auto-grow placeholder="Опишите задачу"></textarea>
+                        <textarea name="description" class="form-field resize-y min-h-8 md:max-h-20 lg:max-h-8 2xl:max-h-27 3xl:max-h-50" rows="1" auto-grow placeholder="Опишите задачу"></textarea>
                     </div>
                     <div class="form-row">
                         <input type="text" name="name" class="form-field" placeholder="Имя">
@@ -341,7 +341,7 @@
                         <input type="text" name="position" class="form-field" placeholder="Должность">
                     </div>
                     <div class="form-row">
-                        <textarea name="message" class="form-field resize-y min-h-8 md:max-h-30 lg:max-h-32" rows="1" auto-grow placeholder="Расскажите о вашем предложении"></textarea>
+                        <textarea name="message" class="form-field resize-y min-h-8 md:max-h-30 lg:max-h-32 3xl:max-h-50" rows="1" auto-grow placeholder="Расскажите о вашем предложении"></textarea>
                     </div>
 
                     <label class="flex items-start gap-2 cursor-pointer select-none">
@@ -478,7 +478,7 @@
                         <input type="text" name="telegram" class="form-field" placeholder="Телеграм">
                     </div>
                     <div class="form-row">
-                        <textarea name="skills" class="form-field resize-y min-h-8 md:max-h-30 lg:max-h-32" rows="1" auto-grow
+                        <textarea name="skills" class="form-field resize-y min-h-8 md:max-h-30 lg:max-h-32 3xl:max-h-50" rows="1" auto-grow
                                   placeholder="Несколько строк о навыках и опыте"></textarea>
                     </div>
                     <div class="form-row">
